支持校验错误翻译
